--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.1.1",
-    "jquery": "3.5.0",
-    "jquery-validation": "1.19.1",
-    "jquery-validation-unobtrusive": "3.2.11"
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.5.0",
+    "jquery-validation": "^1.19.1",
+    "jquery-validation-unobtrusive": "^3.2.11",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {}
 }
