--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-	
+	"ConnectionStrings": {
+			"DutchConnectionString":  "server=(localdb)\\ProjectsV13;Database=DutchTreatDb;Integrated Security=true;MultipleActiveResultSets=true"
+	}
 }
