create the token

--- a/config.json
+++ b/config.json
@@ -5,7 +5,12 @@
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
-			"Microsoft":  "Warning"
+			"Microsoft": "Warning"
 		}
+	},
+	"Tokens": {
+		"Key": "a;lkjasdf;lkajsd;flkjas ;dflkja sd",
+		"Issuer": "localhost",
+		"Audience":  ""
 	}
 }
