fix token parameters in config.config.json

--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
 	},
 	"Tokens": {
 		"Key": "a;lkjasdf;lkajsd;flkjas ;dflkja sd",
-		"Issuer": "localhost",
-		"Audience":  ""
+		"Issuer": "http://localhost:5000",
+		"Audience": "users"
 	}
 }
