create an ClientApp folder and copy/paste files in DutchTreat/src ..
... copy scripts, dependencies, dev dependencies in dutch-app/package.json to DutchTreat/package.json

--- a/DutchTreat.csproj
+++ b/DutchTreat.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\img\" />
     <Folder Include="wwwroot\lib\" />
