--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,14 +1,14 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
+    "outDir": "./wwwroot/clientapp/out-tsc/app",
     "types": []
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
+    "ClientApp/main.ts",
+    "ClientApp/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "ClientApp/**/*.d.ts"
   ]
 }
