import DataService into app.module.ts and inject it into ProductList constructor in productList.component.ts

--- a/DutchTreat.csproj
+++ b/DutchTreat.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Remove="ClientApp\app\shared\dataService.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shop\productList.component.ts" />
     <TypeScriptCompile Remove="wwwroot\ts\main.ts" />
   </ItemGroup>
