--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 wwwroot/lib
+wwwroot/clientapp/**/*.js
+wwwroot/clientapp/**/*.map
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -356,4 +358,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
 
