add some extension to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -359,4 +359,19 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# compiled output
+/dist
+/tmp
+/out-tsc
 
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
