--- a/DutchTreat.csproj
+++ b/DutchTreat.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <TypeScriptCompile Remove="ClientApp\app\shared\dataService.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shared\product.ts" />
+    <TypeScriptCompile Remove="ClientApp\app\shop\cart.component.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shop\productList.component.ts" />
     <TypeScriptCompile Remove="wwwroot\ts\main.ts" />
   </ItemGroup>
