--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@angular/router": "~9.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "lodash": "4.17.15"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
