--- a/DutchTreat.csproj
+++ b/DutchTreat.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Remove="ClientApp\app\checkout\checkout.component.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shared\dataService.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shared\order.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shared\product.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shop\cart.component.ts" />
     <TypeScriptCompile Remove="ClientApp\app\shop\productList.component.ts" />
+    <TypeScriptCompile Remove="ClientApp\app\shop\shop.component.ts" />
     <TypeScriptCompile Remove="wwwroot\ts\main.ts" />
   </ItemGroup>
 
