--- a/DutchTreat.csproj
+++ b/DutchTreat.csproj
@@ -1,44 +1,50 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <TypeScriptCompile Remove="ClientApp\app\checkout\checkout.component.ts" />
-    <TypeScriptCompile Remove="ClientApp\app\login\login.component.ts" />
-    <TypeScriptCompile Remove="ClientApp\app\shared\dataService.ts" />
-    <TypeScriptCompile Remove="ClientApp\app\shared\order.ts" />
-    <TypeScriptCompile Remove="ClientApp\app\shared\product.ts" />
-    <TypeScriptCompile Remove="ClientApp\app\shop\cart.component.ts" />
-    <TypeScriptCompile Remove="ClientApp\app\shop\productList.component.ts" />
-    <TypeScriptCompile Remove="ClientApp\app\shop\shop.component.ts" />
-    <TypeScriptCompile Remove="wwwroot\ts\main.ts" />
-  </ItemGroup>
+	<ItemGroup>
+		<TypeScriptCompile Remove="ClientApp\app\checkout\checkout.component.ts" />
+		<TypeScriptCompile Remove="ClientApp\app\login\login.component.ts" />
+		<TypeScriptCompile Remove="ClientApp\app\shared\dataService.ts" />
+		<TypeScriptCompile Remove="ClientApp\app\shared\order.ts" />
+		<TypeScriptCompile Remove="ClientApp\app\shared\product.ts" />
+		<TypeScriptCompile Remove="ClientApp\app\shop\cart.component.ts" />
+		<TypeScriptCompile Remove="ClientApp\app\shop\productList.component.ts" />
+		<TypeScriptCompile Remove="ClientApp\app\shop\shop.component.ts" />
+		<TypeScriptCompile Remove="wwwroot\ts\main.ts" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\css\" />
-    <Folder Include="wwwroot\img\" />
-    <Folder Include="wwwroot\lib\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\css\" />
+		<Folder Include="wwwroot\img\" />
+		<Folder Include="wwwroot\lib\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="OdeToCode.UseNodeModules" Version="3.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+		<PackageReference Include="OdeToCode.UseNodeModules" Version="3.0.0" />
+	</ItemGroup>
+
+	<Target Name="MyPublishScripts" BeforeTargets="BeforePublish">
+		<Exec Command="npm install" />
+		<Exec Command="gulp" />
+		<Exec Command="ng build" />
+	</Target>
 
 </Project>
